[FEAT] Add number inputs

--- a/index.html
+++ b/index.html
@@ -12,11 +12,23 @@
     </header>
     <main class="main-container">
       <section>
-        <p>Enter the uwu</p>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+        <p class="description">Enter the number you wanna convert</p>
+        <div class="numberInput">
+          <label for="decimalInput">Decimal number:</label>
+          <input type="text" id="decimalInput" />
+        </div>
+        <div class="numberInput">
+          <label for="binaryInput">Binary number:</label>
+          <input type="text" id="binaryInput" />
+        </div>
+        <div class="numberInput">
+          <label for="octalInput">Octal number:</label>
+          <input type="text" id="octalInput" />
+        </div>
+        <div class="numberInput">
+          <label for="hexInput">Hex number:</label>
+          <input type="text" id="hexInput" />
+        </div>
       </section>
     </main>
     <footer class="footer">
