[FEAT] Add js file

--- a/index.html
+++ b/index.html
@@ -34,5 +34,6 @@
     <footer class="footer">
       <p>Made with love by DALO-eng</p>
     </footer>
+    <script src="./script.js"></script>
   </body>
 </html>
