[FEAT] Add conversion

--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
         <p class="description">Enter the number you wanna convert</p>
         <div class="numberInput">
           <label for="decimalInput">Decimal number:</label>
-          <input type="text" id="decimalInput" />
+          <input type="text" class="numInput" id="decimalInput" />
         </div>
         <div class="numberInput">
           <label for="binaryInput">Binary number:</label>
-          <input type="text" id="binaryInput" />
+          <input type="text" class="numInput" id="binaryInput" />
         </div>
         <div class="numberInput">
           <label for="octalInput">Octal number:</label>
-          <input type="text" id="octalInput" />
+          <input type="text" class="numInput" id="octalInput" />
         </div>
         <div class="numberInput">
           <label for="hexInput">Hex number:</label>
-          <input type="text" id="hexInput" />
+          <input type="text" class="numInput" id="hexInput" />
         </div>
       </section>
     </main>
