[FEATURE] Add link to github

--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
       </section>
     </main>
     <footer class="footer">
-      <p>Made with love by DALO-eng</p>
+      <p>
+        Made with love by
+        <a href="https://github.com/DALO-eng" target="_blank">DALO-eng</a>
+      </p>
     </footer>
     <script src="./script.js"></script>
   </body>
